hphp/test/zend/bad/ext/reflection/tests/ReflectionClass_isSubclassOf_error1.php.expectf

Fatal error: %s
Stack trace:
#0 %s(5): ReflectionClass->isSubclassOf('X')
#1 {main}
  thrown in %s on line 5